[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/trebuc.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/dood2.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 656, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 360 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0509804, 0.054902, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_right = -8.0
margin_bottom = 39.0
theme = SubResource( 4 )
text = "player score"
align = 2

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 8.0
margin_right = 209.0
margin_bottom = 39.0
theme = SubResource( 6 )
text = "player 2 score"

[node name="top_wall" type="StaticBody2D" parent="."]
position = Vector2( 324, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_wall"]
position = Vector2( 316, -8 )
shape = SubResource( 1 )

[node name="bottom_wall" type="StaticBody2D" parent="."]
position = Vector2( 8, 736 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_wall"]
position = Vector2( 632, -8 )
shape = SubResource( 1 )

[node name="left" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2( -8, 360 )
shape = SubResource( 2 )

[node name="right" type="Area2D" parent="."]
position = Vector2( 1296, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2( -8, 360 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1244, 660 )

[node name="ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 348 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.5
margin_top = -36.0
margin_right = 105.5
margin_bottom = 36.0
theme = SubResource( 8 )
popup_exclusive = true
window_title = "Score Limit Reached"
dialog_text = "You Lose!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
